--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</div>
 			
 			<ul>
-				<li class="active"><a href="fun.html">Lynn's Home</a></li>
+				<li class="active"><a href="index.html">Lynn's Home</a></li>
 				<li><a href="fun About.html">About Lynn</a></li>
 				<li><a href="fun gallery.html">Gallery</a></li>
 				<li><a href="fun videos.html">Videos</a></li>
